--- a/.github/workflows/ci-conan-msvc.yml
+++ b/.github/workflows/ci-conan-msvc.yml
@@ -35,9 +35,14 @@ jobs:
         run: |
           conan remote add sintef ${env:CONAN_UPLOAD} --insert 0
           conan remote add bincrafters https://api.bintray.com/conan/bincrafters/public-conan
-      - name: Conan create
+      - name: Conan install
         run: |
-          echo Nothing yet
+          conan install qt/5.15.0@bincrafters/stable `
+            -s build_type=${{ matrix.build_type }} `
+            -s compiler.version=${{ matrix.compiler_version }} `
+            -s compiler.toolset=${{ matrix.compiler_toolset }} `
+            -o qt:qtsvg=True `
+            -b missing
       - name: Conan upload
         run: |
-          echo Nothing yet
+          conan upload --all -c -r sintef qt/5.15.0 --retry 10 --retry-wait 20
