--- a/.github/workflows/ci-conan-gcc.yml
+++ b/.github/workflows/ci-conan-gcc.yml
@@ -1,7 +1,10 @@
 name: GCC Conan
 
-# This workflow is triggered on pushes to the repository.
-on: [push]
+on:
+  push:
+    paths-ignore:
+    - 'scripts/**'
+    - 'README.md'
 
 env:
   CONAN_UPLOAD: "https://api.bintray.com/conan/sintef-ocean/conan"
@@ -63,4 +66,4 @@ jobs:
             -b missing
       - name: Conan upload
         run: |
-          conan upload --all -c -r sintef qt/5.15.0 --retry 5 --retry-wait 20
+          conan upload --all -c -r sintef qt/5.15.0 --retry 10 --retry-wait 20
