Try adding wildcard to forced build of gcc qt

--- a/.github/workflows/ci-conan-gcc.yml
+++ b/.github/workflows/ci-conan-gcc.yml
@@ -58,7 +58,7 @@ jobs:
           conan remote add bincrafters https://api.bintray.com/conan/bincrafters/public-conan
       - name: Conan install
         run: |
-          if [ "${{ matrix.build_type }}" == "Debug" ]; then export extra="--build qt/5.15.0"; fi
+          if [ "${{ matrix.build_type }}" == "Debug" ]; then export extra="--build qt/5.15.0*"; fi
           conan install qt/5.15.0@bincrafters/stable \
             -s build_type=${{ matrix.build_type }} \
             -s compiler.version=${{ matrix.compiler_version }} \
