--- a/.github/workflows/ci-conan-msvc.yml
+++ b/.github/workflows/ci-conan-msvc.yml
@@ -50,7 +50,7 @@ jobs:
             -s build_type=${{ matrix.build_type }} `
             -s compiler.version=${{ matrix.compiler_version }} `
             -s compiler.toolset=${{ matrix.compiler_toolset }} `
-            -b missing ${SINTEF_OPTS}
+            -b missing -b outdated ${SINTEF_OPTS}
       - name: Conan upload
         run: |
           conan upload --all -c -r sintef ${env:SINTEF_PKG} --retry 10 --retry-wait 20
