--- a/.github/workflows/ci-conan-gcc.yml
+++ b/.github/workflows/ci-conan-gcc.yml
@@ -50,7 +50,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install prerequisites
         run: |
-          sudo pip3 install --upgrade setuptools pip
+          sudo pip3 install --upgrade setuptools pip jinja2
           sudo pip3 install conan requests
           sudo pip3 install conan_package_tools
           if [ ${{ matrix.compiler_version }} -eq 6 ]; then
