--- a/.github/workflows/ci-conan-msvc.yml
+++ b/.github/workflows/ci-conan-msvc.yml
@@ -37,6 +37,7 @@ jobs:
           pip3 install --upgrade setuptools pip
           pip3 install conan requests
           pip3 install conan_package_tools
+          sudo apt-get install libgl1-mesa-dev
       - name: Configure Conan
         run: |
           conan remote add sintef ${env:CONAN_UPLOAD} --insert 0
@@ -47,7 +48,7 @@ jobs:
             -s build_type=${{ matrix.build_type }} `
             -s compiler.version=${{ matrix.compiler_version }} `
             -s compiler.toolset=${{ matrix.compiler_toolset }} `
-            -b missing -b outdated ${SINTEF_OPTS}
+            -b missing -b outdated ${env:SINTEF_OPTS}
       - name: Conan upload
         run: |
           conan upload --all -c -r sintef ${env:SINTEF_PKG} --retry 10 --retry-wait 20
