Fix location of libgl install clang not msvc

--- a/.github/workflows/ci-conan-clang.yml
+++ b/.github/workflows/ci-conan-clang.yml
@@ -37,6 +37,7 @@ jobs:
           sudo pip3 install conan requests
           sudo pip3 install conan_package_tools
           sudo apt-get install clang-tools-10
+          sudo apt-get install libgl1-mesa-dev
       - name: Configure Conan
         run: |
           conan remote add sintef ${CONAN_UPLOAD} --insert 0
