--- a/.github/workflows/ci-conan-gcc.yml
+++ b/.github/workflows/ci-conan-gcc.yml
@@ -27,7 +27,7 @@ jobs:
       fail-fast: false
       matrix:
         compiler_version: [6, 7, 8, 9]
-        build_type: [Debug, Release]
+        build_type: [Release]
         os: [ubuntu-16.04, ubuntu-18.04, ubuntu-20.04]
         exclude:
           - os: ubuntu-16.04
