--- a/.github/workflows/ci-container.yml
+++ b/.github/workflows/ci-container.yml
@@ -39,5 +39,5 @@ jobs:
         uses: actions/checkout@v2
       - name: Do something in the container ${{ matrix.compiler }} ${{ matrix.compiler_version }}
         run: |
-          clang++ -v | echo no clang
-          g++ -v | echo no gcc
+          clang++ -v || echo no clang
+          g++ -v || echo no gcc
